# tv-types

./: README.md  gen_models.sh  pyproject.toml
src/tv_types/: __init__.py  models.py
